--- a/.github/workflows/macos-compilation.yml
+++ b/.github/workflows/macos-compilation.yml
@@ -16,7 +16,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: macos-latest
+        os: [macos-latest]
         include:
           - os: macos-latest
             compiler: g++-latest
