--- a/.github/workflows/linux-compilation.yml
+++ b/.github/workflows/linux-compilation.yml
@@ -30,7 +30,7 @@ jobs:
       - name: Configure
         run: mkdir build && cmake -Bbuild -DCMAKE_BUILD_TYPE=Release
 
-      - name: Compile a release build of vfs
+      - name: Compile a release build of BlazeFS
         run: make -C build/ -j4
 
 
